--- a/Changelog
+++ b/Changelog
@@ -1,1 +1,24 @@
+Tecnologico! Modpack
 
+
+------------------------------------------------------------------------
+VERSION:(Versione di Minecraft),(Numero maggiore),(Numero minore)
+BUILDING:(Versione di Minecraft),(giorno,mese,anno,lettera correzioni),(versione aggiuntiva)
+Added
+-PER LE NUOVE FUNZIONALITÀ
+Changed
+-PER LE MODIFICHE E FUNZIONALITÀ ESISTENTI
+Removed
+-PER FUNZIONALITÀ RIMOSSE IN QUESTA VERSIONE
+Fixed
+-PER TUTTI I BUG FIX
+BUILDINGS are development versions and may be incomplete.
+Tag GitHub:(Aggiungere tag)
+------------------------------------------------------------------------
+
+
+BUILDING:07.02.2022a
+-Versione Iniziale
+
+BUILDINGS are development versions and may be incomplete.
+Tag GitHub: JE-0a
